--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
          </div>           
                         
          </div>       
-        <script src="./content/scripts/bundle.js"></script>
-        <link rel="stylesheet" href="./content/styles/style.css"/>
+        <script src="./bundle.js"></script>
+        <link rel="stylesheet" href="./style.css"/>
     </body>
 </hmtl>
